fix: ajustar estilos en .wrap y .offButton en CreateDog

--- a/client/src/css/CreateDog.module.css
+++ b/client/src/css/CreateDog.module.css
@@ -134,12 +134,11 @@ label {
 }
 
 .wrap {
-    height         : 100%;
     display        : flex;
     flex-direction : column;
     align-items    : center;
     justify-content: center;
-    margin         : 2rem 0;
+
 }
 
 .offButton {
@@ -224,6 +223,8 @@ label {
     box-shadow      : .1rem .1rem rgba(0, 0, 0, 0.664);
     cursor          : pointer;
     font-size       : .7rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .buttonBack:hover {
